# SimpleClothSimulation

./: BVH.cpp  BVH.h  BVH_Node.cpp  BVH_Node.h  CMakeLists.txt  cloth_collision.cpp  main.cpp
123/: template.cpp  template_with_grid_and_viewchange.cpp
collision_detect/: Matrix.h  main.cpp  rootparitycollisiontest.cpp  rootparitycollisiontest.h  vec.h
